--- a/src/pages/Portafolio.astro
+++ b/src/pages/Portafolio.astro
@@ -6,11 +6,11 @@ import Layout from '../layouts/Layout.astro';
   <div class="projects-grid">
     <div class="project-card">
       <div class="project-image">
-        <img src="/pp2.png?height=200&width=300" alt="NoteFlow" />
+        <img src="/NoteFlow.png?height=200&width=300" alt="NoteFlow" />
         <div class="project-overlay">
           <div class="project-links">
-            <a href="#" class="project-link" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
-            <a href="https://github.com/mecottl/NoteFlow" class="project-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+            <a href="https://noteflow3.vercel.app" class="project-link" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
+            <a href="https://github.com/mecottl/NoteFlow2" class="project-link" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
           </div>
         </div>
       </div>
@@ -18,9 +18,8 @@ import Layout from '../layouts/Layout.astro';
         <h3>NoteFlow</h3>
         <p>Bloc de Notas con generación de texto por contexto de IA</p>
         <div class="project-tech">
-          <span class="tech-tag">React</span>
           <span class="tech-tag">Node.js</span>
-          <span class="tech-tag">SQL</span>
+          <span class="tech-tag">PostgreSQL</span>
         </div>
       </div>
     </div>
@@ -66,7 +65,7 @@ import Layout from '../layouts/Layout.astro';
 
     <div class="project-card">
       <div class="project-image">
-        <img src="/trazo.png?height=200&width=300" alt="Trazo" />
+        <img src="/?height=200&width=300" alt="Trazo" />
         <div class="project-overlay">
           <div class="project-links">
             <a href="#" class="project-link" target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-alt"></i></a>
